# botminter

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Justfile  PR2-REVIEW.md  PROGRESS.md  PROMPT.md  README.md  RELEASE_NOTES.md  botminter-chat-first-orchestration.md  current-loop-id  github-app-identity.md  ralph.yml  release-notes-0.2.0-pre-alpha-v2.md
crates/bm/: Cargo.toml  build.rs
crates/bm/src/: agent_cli.rs  agent_main.rs  bridge.rs  chat.rs  cli.rs  completions.rs  config.rs  keyring_backend.rs  lib.rs  main.rs  member_lifecycle.rs  profile.rs  session.rs  team.rs  workspace.rs
crates/bm/src/acp/: client.rs  mod.rs  types.rs
crates/bm/src/agent_tags/: mod.rs
crates/bm/src/brain/: bridge_adapter.rs  event_watcher.rs  heartbeat.rs  inbox.rs  mod.rs  multiplexer.rs  prompt_template.rs  queue.rs  types.rs
crates/bm/src/bridge/: credential.rs  identity.rs  lifecycle.rs  manifest.rs  mod.rs  provisioning.rs  room.rs
crates/bm/src/chat/: config.rs  mod.rs  skills.rs
crates/bm/src/commands/: attach.rs  bootstrap.rs  brain_run.rs  bridge.rs  chat.rs  completions.rs  credentials.rs  daemon.rs  debug.rs  env.rs  fire.rs  hire.rs  init.rs  knowledge.rs  members.rs  minty.rs  mod.rs  profiles.rs  profiles_init.rs  projects.rs  roles.rs  start.rs  status.rs  stop.rs  teams.rs
crates/bm/src/commands/bridge/: identity.rs  lifecycle.rs  mod.rs  room.rs
crates/bm/src/commands/teams/: mod.rs  show.rs  sync.rs
crates/bm/src/config/: mod.rs
crates/bm/src/daemon/: api.rs  client.rs  config.rs  event.rs  lifecycle.rs  log.rs  mod.rs  process.rs  run.rs
crates/bm/src/formation/: init.rs  launch.rs  lima.rs  local_topology.rs  manager.rs  mod.rs  start_members.rs  stop_members.rs
crates/bm/src/formation/local/: common.rs  credential.rs  mod.rs
crates/bm/src/git/: app_auth.rs  github.rs  manifest_flow.rs  mod.rs  project.rs
crates/bm/src/profile/: agent.rs  embedded.rs  extraction.rs  manifest.rs  member.rs  mod.rs  team_repo.rs
crates/bm/src/session/: mod.rs
crates/bm/src/state/: dashboard.rs  mod.rs
crates/bm/src/topology/: mod.rs
crates/bm/src/web/: assets.rs  files.rs  members.rs  mod.rs  overview.rs  process.rs  state.rs  sync.rs  teams.rs
crates/bm/src/workspace/: context.rs  mod.rs  repo.rs  robot.rs  sync.rs  team_sync.rs  util.rs
crates/bm/test-fixtures/: test-only.pem
crates/bm/tests/: README.md  agent_inbox.rs  bridge_sync.rs  cli_parsing.rs  conformance.rs  integration.rs  profile_roundtrip.rs
crates/bm/tests/e2e/: bootstrap.rs  daemon_lifecycle.rs  github.rs  github_mock.rs  helpers.rs  init_to_sync.rs  isolated.rs  main.rs  rocketchat.rs  start_to_stop.rs  stub-ralph.sh  telegram.rs  test_env.rs  tuwunel.rs
crates/bm/tests/e2e/scenarios/: manifest_journey.rs  mod.rs  operator_journey.rs  (+2 more)
crates/bm/tests/exploratory/: FAILURE-REPORT.md  Justfile  PLAN.md  REPORT.md  lib.sh
(+634 files in other folders)
