[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.metadata.dist]
ci = "github"
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
installers = ["shell"]
include = ["README.md", "LICENSE"]
cargo-dist-version = "0.30.3"
allow-dirty = ["ci"]
install-path = "CARGO_HOME"
install-updater = false

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "ubuntu-latest"

[workspace.metadata.dist.dependencies.apt]
pkg-config = "*"

[profile.dist]
inherits = "release"
