[package]
name = "bm"
version = "0.2.0-pre-alpha"
edition = "2021"
description = "Lead your own Claude Code agents"
license = "Apache-2.0"
repository = "https://github.com/botminter/botminter"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
cliclack = "0.3"
console = "0.15"
indicatif = "0.17"
comfy-table = "7"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
include_dir = "0.7"
dirs = "5"
which = "7"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tiny_http = "0.12"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
keyring = { version = "3", features = ["sync-secret-service"] }
dbus-secret-service = { version = "4.1.0", features = ["vendored"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
sacp = "10.1.0"
futures = "0.3"
tracing = "0.1"

[features]
e2e = []

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
libtest-mimic = "0.8"
dbus-secret-service = { version = "4.1.0", features = ["vendored"] }

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"
required-features = ["e2e"]
harness = false
